--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "babel-plugin-transform-define": "^1.3.0",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-polyfill": "^6.26.0",
-        "babel-preset-env": "^1.7.0"
+        "babel-preset-env": "^1.7.0",
+        "publish-please": "^5.2.0"
     }
 }
